# my-repo

./: .branch_check  .branch_content_check  .test_check  README.md  _check.txt  calculator.py  hermes_workflow.py  index.html  pyproject.toml  run.sh  test_calculator.py  test_hermes_workflow.py
.github/ISSUES/: prd-001-issue-body.md
.github/ISSUE_TEMPLATE/: prd-001-hello-world-website.md
.github/workflows/: ci.yml  deploy.yml
docs/prds/: PRD-001-hello-world-website.md
src/: __init__.py  calculator.py  cli.py  stats.py
tests/: simulate_my_repo.py  test_calculator.py  test_stats.py
